# Demos

./: .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .pr_agent.toml  AGENTS.md  Demos.code-workspace  UserService.cs  UserService.java  agent.toml  demo-frontend-light-and-dark-mode.patch  demo-local.patch  docker-compose.yml  example.pr_agent.toml  minimal.pr_agent.toml  pr_compliance_checklist.yaml  qodo.code-workspace  qodo.md  readme.md
.github/workflows/: ci.yml
.qodo_merge/: time_machine_2025-08-14.md
Accounts/Pathlock/: AccountPathlock.code-workspace  TusharTestScenarios.md  test-account-pathlock-e2e.sh
Accounts/Postman/: AccountPostman.code-workspace
Sri/agents-demo/: 2025-09-02-30-day-report-qodo-gen-vscode-sample.md  qodo-gen-vscode-report.sh
Sri/agents-library/: 01_demo_e2e_tests.toml  01_demo_pr_compliance.toml  01_demo_pr_compliance_gdpr.toml  01_demo_pr_compliance_hipaa.toml  01_demo_pr_compliance_owasp.toml  01_demo_pr_compliance_pcidss.toml  01_demo_pr_compliance_soc2type2.toml  01_demo_report_generation.toml  01_demo_weekly_review.toml  grug-brained-minimalist-planner.toml
Sri/boring-todo-api/: pyproject.toml
Sri/boring-todo-api/src/boring_todo_api/: main.py
Sri/boring-todo-api/src/boring_todo_api/tests/: test_main.py
Sri/boring-todo-app/: README.md  jest.config.ts  package-lock.json  (+1 more)
agents/: code_smells.toml  unused_dependencies_finder.toml
backend/: .env.example  Dockerfile  package-lock.json  package.json
code-crimes-java/: .gitignore  README.md  pom.xml
frontend/: Dockerfile  index.html  package-lock.json  package.json
(+183 files in other folders)
