[project]
name = "boring-todo-api"
version = "0.1.0"
description = ""
authors = [{ name = "Sri Rang", email = "srirangan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.115.11,<0.116.0)"]

[tool.poetry]
packages = [{ include = "boring_todo_api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
